bynkc/tests/fixtures/negative/107_refine_literal_violates/input.bynk
commons demo {
  type Reps = Int where InRange(1, 100)

  -- v0.9.4: a literal in a position that expects a refined type is checked at
  -- compile time. `0` violates `InRange(1, 100)`, so this is a compile error —
  -- no runtime `Result` involved.
  fn bad() -> Reps {
    0
  }
}
